--- a/sample_config.env
+++ b/sample_config.env
@@ -1,12 +1,12 @@
 # Fill your config
-API_HASH = ""
+API_HASH = "7ea2149629e445936619f06a3c0dc716"
 BOT_TOKEN = ""
-TELEGRAM_API = ""
-OWNER = ""
-OWNER_USERNAME = ""
-PASSWORD = ""
-DATABASE_URL = ""
-LOGCHANNEL = ""   # Add channel id as: "-100 + Actual_ID"
+TELEGRAM_API = "29171167"
+OWNER = "1049173662 7251898668"
+OWNER_USERNAME = "AmitKaliraman"
+PASSWORD = "akmergebot"
+DATABASE_URL = "mongodb+srv://merge:merge@cluster0.gtpo3kw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+LOGCHANNEL = "-1002247983720"   # Add channel id as: "-100 + Actual_ID"
 USER_SESSION_STRING = "" # Premium account session string to upload upto 4GB (requires "LOGCHANNEL")
 
 # tired of redeploying :(
